crates/carta/tests/snapshots/golden_writer__docbook__figure__figure-captioned.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<figure>
  <title>a caption</title>
  <mediaobject>
    <imageobject>
      <imagedata fileref="pic.png" />
    </imageobject>
    <textobject><phrase>a caption</phrase></textobject>
  </mediaobject>
</figure>
