crates/carta/tests/snapshots/golden_writer__docbook__figure__figure-no-alt.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  <inlinemediaobject>
    <imageobject>
      <imagedata fileref="pic.png" />
    </imageobject>
  </inlinemediaobject>
</para>
