crates/carta/tests/snapshots/golden_writer__docbook__figure__figure-with-dims.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<figure>
  <title>alt text</title>
  <mediaobject>
    <imageobject>
      <imagedata fileref="pic.png" width="200px" />
    </imageobject>
    <textobject><phrase>alt text</phrase></textobject>
  </mediaobject>
</figure>
